--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     // Glide v4 uses this new annotation processor
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    // Image Loading
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 }
